# ocr

./: .gitignore  Dockerfile  README.md  import_reqcheck.py  ocr_comparison.py  ocr_comparison_4090_M4.py  ocr_comparison_all.py  ocr_ez_trocr.py  ocr_ez_trocr_cuda_m4_cpu.py  ocr_paddle.py  ocr_results_Darwin_20250327_115712.json  ocr_results_Darwin_20250327_120822.json  ocr_results_Darwin_20250327_121618.json  prepare_training_data.py  pyproject.toml  requirements.txt  setup.py  train_trocr.py
api/: main.py
api/core/: config.py  logging.py
ocr_service/: Dockerfile  README.md  docker-compose.yml  requirements.txt  requirements_4090.txt  setup.py
ocr_service/api/: main.py
ocr_service/api/core/: config.py  logging.py
ocr_service/services/ocr/: base.py  easyocr.py  factory.py  hiocr.py  paddleocr.py  tesseract.py  trocr.py
ocr_service/tests/api/: test_routes.py
ocr_service/tests/integration/: test_ocr_pipeline.py
ocr_service/tests/services/: test_easyocr.py  test_hiocr.py  test_paddleocr.py  test_trocr.py
ocr_service/tests/utils/: test_logging.py
tests/: conftest.py
utils/: image.py  metrics.py
